# giftwrap

./: .gitignore  .gitreview  .rubocop.yml  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  Vagrantfile  requirements.txt  sample.yml  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
examples/: docker-manifest.yml  manifest.yml  superrepo-manifest.yml
giftwrap/: build_spec.py  builder.py  color.py  gerrit.py  log.py  openstack_commit.py  openstack_git_repo.py  openstack_project.py  package.py  settings.py  shell.py  util.py
giftwrap/builders/: __init__.py  docker_builder.py  package_builder.py
giftwrap/templates/: Dockerfile.jinja2
giftwrap/tests/: test_builder.py  test_buildspec.py  test_log.py  test_repo.py  test_settings.py  test_superrepo.py  test_util.py  utils.py
scripts/: prepare_debian.sh  prepare_redhat.sh
