[metadata]
name = python-giftwrap
version = 2.1.0
summary = giftwrap - A tool to build full-stack native system packages.
description-file =
    README.md
author = Craig Tracey
author-email = craigtracey@gmail.com
home-page = https://github.com/blueboxgroup/giftwrap
include_package_data = True
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[entry_points]
console_scripts =
    giftwrap = giftwrap.shell:main

giftwrap.builder.drivers =
    package = giftwrap.builders.package_builder:PackageBuilder
    docker = giftwrap.builders.docker_builder:DockerBuilder

[files]
packages =
    giftwrap
extra_files =
    giftwrap/templates/Dockerfile.jinja2

[extras]
sphinx =
  sphinx>=1.1.2,!=1.2.0,!=1.3b1,<1.3

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
