[metadata]
name = python-giftwrap
version = 2.2.0
summary = giftwrap - A tool to build full-stack native system packages.
description-file =
    README.md
author = Craig Tracey
author-email = craigtracey@gmail.com
home-page = https://github.com/openstack/giftwrap
include_package_data = True
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[entry_points]
console_scripts =
    giftwrap = giftwrap.shell:main

giftwrap.builder.drivers =
    package = giftwrap.builders.package_builder:PackageBuilder
    docker = giftwrap.builders.docker_builder:DockerBuilder

[files]
packages =
    giftwrap
extra_files =
    giftwrap/templates/Dockerfile.jinja2

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
